# CPP_ML

./: .gitignore  CMakeLists.txt
examples/: KNN_example.cpp  logistic_regression_example.cpp  lr_example.cpp
include/: CppML.h
include/core/: Dataset.h  Matrix.h  Metrics.h  Utils.h
include/models/: KNN.h  LR.h  Logistic_regression.h
src/core/: Dataset.cpp  Matrix.cpp  Metrics.cpp  Utils.cpp
src/models/: KNN.cpp  LR.cpp  Logistic_regression.cpp
